@@ -1,4 +1,4 @@
-/* Generated by typeslots.py $Revision: 87806 $ */
+/* Generated by typeslots.py $Revision$ */
 0,
 0,
 offsetof(PyHeapTypeObject, as_mapping.mp_ass_subscript),
