@@ -1227,9 +1227,6 @@
 /* Define on NetBSD to activate all library features */
 #undef _NETBSD_SOURCE
 
-/* Define _OSF_SOURCE to get the makedev macro. */
-#undef _OSF_SOURCE
-
 /* Define to 2 if the system does not provide POSIX.1 features except with
    this defined. */
 #undef _POSIX_1_SOURCE
