@@ -183,6 +183,8 @@ Build
 - Issue #11268: Prevent Mac OS X Installer failure if Documentation
   package had previously been installed.
 
+- Issue #11495: OSF support is eliminated. It was deprecated in Python 3.2.
+
 Tools/Demos
 -----------
 
